# registry

./: .env.example  .gitignore  .ruby-gemset  Cargo.toml  Gemfile  README.md  Rakefile  config.ru  package.json  webpack.config.js
app/relations/: users.rb
config/: application.rb  boot.rb  environment.rb
config/initializers/: database.rb  rack.rb  rack_attack.rb  rom.rb  sinatra.rb
config/puma/: development.rb  production.rb
contrib/rocket_csrf/: Cargo.toml
db/migrate/: 20201013203921_create_users.rb
exe/: skelerb
lib/: skelerb.rb
lib/fedihub/: registry.rb
lib/fedihub/registry/: application.rb  config.rb  router.rb
lib/fedihub/registry/relations/: users.rb
lib/fedihub/registry/repos/: user.rb
lib/fedihub/webapp/relations/: users.rb
lib/fedihub/webapp/repos/: user.rb
lib/skelerb/: application.rb  component.rb  config.rb
locales/: en.ftl  ru.ftl
locales/ru/: web.ftl
migrations/2020-10-14-203215_create_users/: down.sql  up.sql
migrations/2020-10-21-044318_create_employees/: down.sql  up.sql
migrations/2020-10-21-064644_create_donation_crypto_addresses/: down.sql  up.sql
migrations/2020-10-22-044127_create_reports/: down.sql  up.sql
src/: config.rs  csrf.rs  database.rs  forms.rs  i18n.rs  main.rs  models.rs  responses.rs  routes.rs  schema.rs  states.rs  tests.rs  views.rs  web.rs
src/forms/: user.rs
src/i18n/: handlebars_helpers.rs
src/models/: donation_crypto_address.rs  employee.rs  report.rs  user.rs
src/routes/: donate.rs  home.rs  reports.rs  sessions.rs  team.rs  users.rs
src/routes/well_known/matrix/: server.rs
src/tests/: forms.rs  requests.rs
templates/: error.html.hbs  index.html.hbs  layout.html.hbs  navbar.html.hbs  sign_up.html.hbs  site.html.hbs
templates/donate/: index.html.hbs
templates/home/: index.html.hbs
templates/reports/: index.html.hbs
templates/sessions/: new.html.hbs
templates/team/: index.html.hbs
templates/users/: new.html.hbs
views/layouts/: site.html.erb
