[package]
name = "fedihub-website"
version = "0.0.0"
authors = ["Alex Kotov <kotovalexarian@gmail.com>"]
edition = "2018"
description = "Our website"
readme = "README.md"
homepage = "https://fedihub.com"
repository = "https://github.com/fedihubcom/website.git"
license-file = "LICENSE"
keywords = ["web"]
categories = []
publish = true

[dependencies]
bcrypt = "0.8.2"
dotenv = "0.15.0"
fluent-bundle = "0.13.1"
handlebars = "1.1.0"
r2d2 = "0.8.9"
regex = "1.4.1"
rocket_csrf = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
unic-langid = "0.9.0"

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "r2d2"]

[dependencies.rocket]
version = "0.4.5"
features = ["private-cookies"]

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["diesel_postgres_pool", "handlebars_templates"]

[dependencies.validator]
version = "0.11.0"
features = ["derive"]
